2013-06-12  Mischa Jonker <mjonker@synopsys.com>

	* dejagnu/telnet-extra.exp: Make new line handling consistent
	with rsh_exec.

2013-06-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Also fetch tags.
	* tag-release.sh: Make sure tool chain repo is up to date.

2013-06-07  Anton Kolesov <anton.kolesov@synopsys.com>

	* run-tests.sh: Add --elf32-nsim-props option to specify nSIM properties
	file.
	* dejagnu/nsim-extra.exp: Use conventional environment variable name for
	nSIM properties file path.

2013-06-07  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Replace --compact-libraries and --fast-libraries
	with --target-cflags and use to set environment variable
	CFLAGS_FOR_TARGET.
	* build-elf32.sh: Don't use TARGET_CFLAGS.
	* build-uclibc.sh: Likewise.

2013-06-06  Vineet Gupta <vgupta@synopsys.com>

	* build-uclibc.sh: Enable building for EM

2013-06-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --compact-libraries and --fast-libraries as
	options to set TARGET_CFLAGS.
	* build-elf32.sh: Use TARGET_CLAGS when configuring.
	* build-uclibc.sh: Likewise.

2013-06-03  Anton Kolesov <anton.kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp: Correct typo.

2013-05-31  Anton Kolesov <anton.kolesov@synopsys.com>

	* get-random-port.sh: Script that returns random port number that is free.
	* dejagnu/nsim-extra.exp, dejagnu/baseboards/arc-nsim.exp: Use
	get-random-port.sh instead of incremented ports and set very big
	max_reload_reboots value.

2013-05-23	Anton Kolesov <anton.kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp, dejagnu/baseboards/arc-nsim.exp: Change
	functions where watchdog breakpoints are set from 'abort' and '_exit' to
	'exit' and '_exit_r', use NSIM_HOME environment variable to start nsim_gdb
	instance, use option -reconnect of nsim_gdb, use only a limited range of
	TCP ports for GDB communication.

2013-05-15  Jeremy Bennett <jeremy.bennett@embecosm.com>
